--- a/syz-cluster/dashboard/templates/base.html
+++ b/syz-cluster/dashboard/templates/base.html
@@ -9,12 +9,15 @@
     <title>{{.Title}}</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light justify-content-start">
+    <nav class="navbar navbar-light navbar-expand-lg bg-light justify-content-start">
       <a class="navbar-brand px-3" href="#">{{.Title}}</a>
-      <div class="">
+      <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item{{if eq .Template "index.html"}} active{{end}}">
             <a class="nav-link" href="/">All Series</a>
+          </li>
+          <li class="nav-item{{if eq .Template "graphs.html"}} active{{end}}">
+            <a class="nav-link" href="/stats">Statistics</a>
           </li>
         </ul>
       </div>
