syz-cluster: add link to download the whole series
This will simplify debugging of mistriaged patch series that ended up
either not applying anywhere or ended up with a build error.

--- a/syz-cluster/dashboard/templates/series.html
+++ b/syz-cluster/dashboard/templates/series.html
@@ -71,7 +71,7 @@
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Content</th>
+                    <th>Content <a href="/series/{{.ID}}/all_patches">[All]</a></th>
                 </tr>
             </thead>
             <tbody>
