syz-cluster: show series versions in the dashboard
Display a list of other versions of the same series on the series details page.
Fetch all series sharing the same title and render them in a new "Series Versions" table, allowing navigation between
different versions of a patch series.

--- a/syz-cluster/dashboard/templates/series.html
+++ b/syz-cluster/dashboard/templates/series.html
@@ -53,7 +53,16 @@
                 </tr>
                 <tr>
                     <th>Version</th>
-                    <td>{{.Version}}</td>
+                    <td>
+                        <select class="form-select" onchange="window.location.href=this.value;">
+                            {{$currentSeriesVersion := .Version}}
+                            {{range .Versions}}
+                                <option value="/series/{{.ID}}" {{if eq .Version $currentSeriesVersion}}selected{{end}}>
+                                    Version {{.Version}}
+                                </option>
+                            {{end}}
+                        </select>
+                    </td>
                 </tr>
                 <tr>
                     <th>Cc</th>
