dashboard/app: make bug lists collapsible
The bug lists on the main page are extremely long,
it's very hard to navigate between them.
Make bug lists collapsible.

--- a/dashboard/app/templates/main.html
+++ b/dashboard/app/templates/main.html
@@ -19,7 +19,13 @@ Main page.
 	{{end}}
 	{{template "bug_filter" $.BugFilter}}
 	{{range $group := $.Groups}}
-		{{template "bug_list" $group}}
+		<details open>
+			<summary class="bug_list_caption">
+				{{$group.Caption}} ({{len $group.Bugs}})
+				<a id="{{$group.Fragment}}" href="#{{$group.Fragment}}">🔗</a>
+			</summary>
+			{{template "bug_list" $group}}
+		</details>
 	{{end}}
 </body>
 </html>
