dashboard/app: improve AI UI
A bag of minor assorted improvements to data formatting.
+ show job results in the jobs table

--- a/dashboard/app/templates/ai_job.html
+++ b/dashboard/app/templates/ai_job.html
@@ -28,11 +28,17 @@ Detailed info on a single AI job execution.
 				<button type="submit">Set</button>
 			</fieldset>
 		</form>
+		<br>
 	{{end}}
 
-	{{range $res := .Results}}
-		<br><b>{{$res.Name}}:</b><br>
-		<div id="ai_result_div"><pre>{{$res.Value}}</pre></div><br>
+	{{range $res := .Job.Results}}
+		{{if $res.IsBool}}
+			<b>{{$res.Name}}:</b>
+			{{if $res.Value}}✅{{else}}❌{{end}}&nbsp;&nbsp;&nbsp;
+		{{else}}
+			<br><br><b>{{$res.Name}}:</b>
+			<br><div id="ai_result_div"><pre>{{$res.Value}}</pre></div>
+		{{end}}
 	{{end}}
 
 	<table class="list_table">
