dashboard/app: show crash report on AI job page

--- a/dashboard/app/templates/ai_job.html
+++ b/dashboard/app/templates/ai_job.html
@@ -41,6 +41,11 @@ Detailed info on a single AI job execution.
 		{{end}}
 	{{end}}
 
+	{{if .CrashReport}}
+	<br><b>Crash report:</b><br>
+	<div id="crash_div"><pre>{{.CrashReport}}</pre></div><br>
+	{{end}}
+
 	<table class="list_table">
 		<caption>Trajectory:</caption>
 		<thead><tr>
