pkg/aflow: make LLM model per-agent rather than per-flow
Having LLM model per-agent is even more flexible than per-flow.
We can have some more complex tasks during patch generation with the most elaborate model,
but also some simpler ones with less elaborate models.

--- a/dashboard/app/templates/ai_job.html
+++ b/dashboard/app/templates/ai_job.html
@@ -65,6 +65,9 @@ Detailed info on a single AI job execution.
 			<td>
 				<details>
 					<summary>{{formatDuration $span.Duration}}</summary>
+					{{if $span.Model}}
+						<b>Model:</b> <div id="ai_details_div"><pre>{{$span.Model}}</pre></div><br>
+					{{end}}
 					{{if $span.Error}}
 						<b>Error:</b> <div id="ai_details_div"><pre>{{$span.Error}}</pre></div><br>
 					{{end}}
