--- a/pkg/html/pages/style.css
+++ b/pkg/html/pages/style.css
@@ -15,11 +15,12 @@ h1, h2, h3, h4 {
 	font-weight: bold;
 }
 
-.navigation_tab {
+.navigation .navigation_tab {
 	border: 1px solid black;
 	padding: 4px;
 	margin: 4px;
-	display: inline-block;
+	display: flex;
+	align-items: center;
 }
 
 .navigation_tab a:hover {background-color: #ddd;}
@@ -36,7 +37,6 @@ h1, h2, h3, h4 {
 	padding-top: 15px;
 	padding-bottom: 6px;
 	display: flex;
-	align-items: center;
 	flex-wrap: wrap;
 }
 
@@ -500,6 +500,8 @@ aside {
 	border: none;
 	font-family: inherit;
 	font-size: inherit;
+	padding: 0;
+	margin: 0;
 }
 
 /* The container <div> - needed to position the dropdown content */
