dashboard: journal user actions on the ai dashboard
On the bug's page, display the history of job result changes.

For now, only log manual job result review results.

--- a/dashboard/app/templates/ai_job.html
+++ b/dashboard/app/templates/ai_job.html
@@ -31,6 +31,29 @@ Detailed info on a single AI job execution.
 		<br>
 	{{end}}
 
+	{{if .History}}
+	<table class="list_table">
+		<caption>Decision History:</caption>
+		<thead>
+			<tr>
+				<th>Time</th>
+				<th>User</th>
+				<th>Decision</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{range .History}}
+			<tr>
+				<td>{{formatTime .Date}}</td>
+				<td>{{.User}}</td>
+				<td>{{.Correct}}</td>
+			</tr>
+			{{end}}
+		</tbody>
+	</table>
+	<br>
+	{{end}}
+
 	{{range $res := .Job.Results}}
 		{{if $res.IsBool}}
 			<b>{{$res.Name}}:</b>
